URI to cval file was wrong in Windows (#14629)
Change-Id: Ifdcf8bcaf6f613660b185501be92eec0b43700b5